test/Execute/SyntaxErrorTest/while_missing_condition.typh
while (True {
}

"""stderr
syntax error: $FILE:1:12
  expected ')'
    1 |  while (True {
                    ^
"""
